--- a/src/assets/scss/_stickyNotes.scss
+++ b/src/assets/scss/_stickyNotes.scss
@@ -1,16 +1,48 @@
-.sticky-notes {
-    position: relative;
-    width: 100%;
-    height: 100vh;
+.sticky {
+    &-notes {
+        position: relative;
+        width: 100%;
+        height: 100vh;
 
-    &-position {
-        position: absolute;
-        width: 300px;
-        height: 150px;
-        cursor: pointer; // default state
+        &-card {
+            position: relative;
+        }
 
-        &.dragging {
-            cursor: grabbing;
+        &-container {
+            position: absolute;
+
+            &:hover {
+                .sticky-notes-icon {
+                    display: block;
+                }
+            }
+
+            .sticky-notes-icon {
+                cursor: pointer;
+                font-size: 1.2rem;
+                color: #333;
+                display: none;
+            }
+        }
+
+        &-icons {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            display: flex;
+            z-index: 10;
+            gap: 10px;
+        }
+
+        &-position {
+            position: absolute;
+            width: 300px;
+            height: 150px;
+            cursor: pointer; // default state
+
+            &.dragging {
+                cursor: grabbing;
+            }
         }
     }
 }
