Replaced the badge with the highlight effect and created a seperate component with the fields component

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -30,4 +30,11 @@
             background-color: var(--c-priority-low-l);
         }
     }
+
+    // border colors
+    &-border {
+        &-high {
+            border: 1.5px solid var(--c-priority-high-l) !important;
+        }
+    }
 }
