--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,7 @@
 @import url(./_stickyNotes.scss);
 @import url(./_colors.scss);
 @import url(./_forms.scss);
+@import url(./_highlight.scss);
 
 :root {
     // Priority colors
