--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,6 +2,9 @@
 @import url(./_colors.scss);
 @import url(./_forms.scss);
 @import url(./_highlight.scss);
+@import url(./_drawer.scss);
+@import url(./_headings.scss);
+@import url(./_backgrounds.scss);
 
 :root {
     // Priority colors
