--- a/src/assets/scss/_headings.scss
+++ b/src/assets/scss/_headings.scss
@@ -1,4 +1,20 @@
 h1 {
+    display: inline-block;
+    position: relative;
+    margin: 0;
+    padding-bottom: 10px;
     font-size: 2em;
+    text-align: center;
     font-weight: 600;
+
+    &::after {
+        content: "";
+        display: block;
+        width: 105%;
+        border: solid 5px #000;
+        border-color: #000 transparent transparent transparent;
+        border-radius: 30em / 7em 4em 0 0;
+        margin-top: 10px;
+        height: 25px;
+    }
 }
